tests/error/comptime/check_dereference02.bz
// error: invalid memory access of an object of type 'i32'
// note: while evaluating expression at compile time
// note: address is a one-past-the-end pointer into this stack object
// error: failed to evaluate expression at compile time
function test()
{
	(consteval {
		let arr: [??: i32] = [ 0, 1, 2 ];
		let p = &arr[0];
		*(p + arr.size());
	});
}
